| Summary: | ASTERISK-27394: [patch] tcptls: Print notice when TLS is enabled but not configured. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch webrtc |
| Date Opened: | 2017-11-06 03:26:43.000-0600 | Date Closed: | 2017-11-07 09:43:22.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 13.18.0 15.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) no_ssl_notice.patch | |
| Description: | Asterisk can be compiled without a SSL/TLS library, without the Development Headers of OpenSSL. However, if TLS (SIP) or Secure-WebSockets (WebRTC) was enabled in a configuration file, Asterisk did not notice the user. Asterisk failed silently, only the corresponding TCP ports were not open. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-11-07 09:43:23.740-0600 Change 6999 merged by Joshua Colp: tcptls: Print notice when TLS is enabled but not configured. [https://gerrit.asterisk.org/6999|https://gerrit.asterisk.org/6999] By: Friendly Automation (friendly-automation) 2017-11-07 09:46:11.921-0600 Change 7000 merged by Jenkins2: tcptls: Print notice when TLS is enabled but not configured. [https://gerrit.asterisk.org/7000|https://gerrit.asterisk.org/7000] By: Friendly Automation (friendly-automation) 2017-11-07 10:13:30.419-0600 Change 6998 merged by Joshua Colp: tcptls: Print notice when TLS is enabled but not configured. [https://gerrit.asterisk.org/6998|https://gerrit.asterisk.org/6998] | ||